--- a/.github/workflows/test-pr-buildx.yml
+++ b/.github/workflows/test-pr-buildx.yml
@@ -3,28 +3,28 @@ name: test-pr-buildx
 on:
   pull_request:
     branches: master
+  workflow_dispatch:
     
 jobs:
   buildx:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v3
-      -
-        name: Set up QEMU
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         with:
           platforms: arm64,amd64
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Available platforms
+
+      - name: Available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
-      -
-        name: Run Buildx
+
+      - name: Run Buildx
         run: |
           docker buildx build \
             --platform linux/amd64,linux/arm64 \
