--- a/.github/workflows/release-buildx.yml
+++ b/.github/workflows/release-buildx.yml
@@ -43,6 +43,6 @@ jobs:
             --platform linux/amd64,linux/arm64 \
             --output "type=image,push=true" \
             --file ./Dockerfile \
-            --tag ghcr.io/$GITHUB_REPOSITORY:$GITHUB_SHA \
-            --tag ghcr.io/$GITHUB_REPOSITORY:$RELEASE_VERSION \
-            --tag ghcr.io/$GITHUB_REPOSITORY:latest . 
+            --tag ghcr.io/${{ github.repository }}:${{ github.sha }} \
+            --tag ghcr.io/${{ github.repository }}:$RELEASE_VERSION \
+            --tag ghcr.io/${{ github.repository }}:latest .
